overflow-x bug fixed

--- a/css/projects.css
+++ b/css/projects.css
@@ -7,6 +7,7 @@
 body {
     height: 100vh;
     background-color: #d5cfe1;
+    overflow-x: hidden;
 }
 
 .container {
