--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 body {
     height: 100vh;
     background-color: #d5cfe1;
+    overflow-x: hidden;
 }
 
 .container {
